--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <!-- <script src="https://raw.githubusercontent.com/Agezao/confetti-js/master/dist/index.min.js"></script> -->
-    <script src="confetti.min.js"></script>
+    <!-- <script src="confetti.min.js"></script> -->
   </head>
   <body>
     <div class="logo">
-      <img src="./logo.png" alt="" />
+      <img src="./logo.svg" alt="" />
     </div>
 
     <div class="app">
