--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <!-- <script src="https://raw.githubusercontent.com/Agezao/confetti-js/master/dist/index.min.js"></script> -->
-    <!-- <script src="confetti.min.js"></script> -->
+    <script src="confetti.min.js"></script>
   </head>
   <body>
     <div class="logo">
