--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="logo">
-      <img src="./logo.svg" alt="" />
+      <img src="./Logo.svg" alt="" />
     </div>
 
     <div class="app">
